--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.application.name=kmanager
 server.port=8099
+
+logging.level.root=WARN
+logging.level.org.springframework.web=WARN
+logging.level.org.apache.zookeeper=WARN
+logging.level.com.chickling.kmanager=WARN
+logging.file=logs/kmanager.log
