--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=kmanager
 server.port=8099
 
-logging.level.root=WARN
-logging.level.org.springframework.web=WARN
-logging.level.org.apache.zookeeper=WARN
-logging.level.com.chickling.kmanager=WARN
+logging.level.root=Info
+logging.level.org.springframework=ERROR
+logging.level.org.apache.zookeeper=ERROR
+logging.level.org.apache.kafka=ERROR
+logging.level.org.I0Itec=ERROR
+logging.level.com.chickling.kmanager.utils=ERROR
 logging.file=logs/kmanager.log
