--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-streams</artifactId>
+			<version>0.10.2.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.101tec</groupId>
 			<artifactId>zkclient</artifactId>
 			<version>0.10</version>
