add kafka consumer demo; OffsetFetchTest

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,47 +1,5 @@
-log4j.rootLogger=info,stdout,debug,info,error
+log4j.rootLogger=info,stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender  
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout  
 log4j.appender.stdout.layout.ConversionPattern=%-5.5p:%d -%t [ %c - %L ] - %m%n
-
-log4j.logger.debug=debug
-log4j.appender.debug=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.debug.layout=org.apache.log4j.PatternLayout  
-log4j.appender.debug.layout.ConversionPattern=%d %p [%c] - %m%n  
-log4j.appender.debug.Threshold=DEBUG
-log4j.appender.debug.append=true
-log4j.appender.debug.File=${user.dir}/logs/debug.log
-
-log4j.logger.info=info  
-log4j.appender.info=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.info.layout=org.apache.log4j.PatternLayout
-log4j.appender.info.layout.ConversionPattern=%d %p [%c] - %m%n
-log4j.appender.info.Threshold=INFO
-log4j.appender.info.append=true
-log4j.appender.info.BufferSize=1024
-log4j.appender.info.File=${user.dir}/logs/info.log
-  
-log4j.logger.error=error
-log4j.appender.error=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.error.layout=org.apache.log4j.PatternLayout
-log4j.appender.error.layout.ConversionPattern=%d %p [%c] - %m%n  
-log4j.appender.error.Threshold=ERROR
-log4j.appender.error.append=true
-log4j.appender.error.File=${user.dir}/logs/error.log
-
-log4j.logger.monitor=debug,monitor
-log4j.appender.monitor=org.apache.log4j.RollingFileAppender
-log4j.additivity.monitor=false
-log4j.appender.monitor.MaxFileSize=100MB
-log4j.appender.monitor.MaxBackupIndex=3
-log4j.appender.monitor.File=${user.dir}/logs/monitor.log
-log4j.appender.monitor.layout=org.apache.log4j.PatternLayout
-log4j.appender.monitor.layout.ConversionPattern=%m%n
-
-#enable detail log for custom destory method
-log4j.logger.org.springframework=info
-log4j.logger.org.apache=info
-log4j.logger.org.apache.zookeeper=info
-log4j.logger.me.prettyprint=error
-log4j.logger.kafka=error
-log4j.logger.kafka.utils=fatal
