1.重新组织pom文件，移除重复依赖; 2.在获取MBeanServerConnection失败后，重新建立jmxConnection;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=kmanager
 server.port=8099
 
-logging.level.root=Info
+logging.level.root=INFO
 logging.level.org.springframework=ERROR
 logging.level.org.apache.zookeeper=ERROR
 logging.level.org.apache.kafka=ERROR
